--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,6 @@
 {
-    "version": 2,
-    "public": "dist",
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/static-build",
-        "config": { "distDir": "dist" }
-      }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/index.html" }
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/index.html" }
     ]
   }
   
